# NovaBudget

./: .env.example  .gitignore  260217_CostbookInd_3k.xlsx  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml
backend/: CLAUDE.md  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 002_major_restructure.py  003_config_to_db.py  004_remove_budget_total.py  005_attachment_entry_refs.py  a1b2c3d4e5f6_add_user_invitation_fields.py  bc74ec0ff6c4_initial_schema.py
backend/app/: auth.py  config.py  db.py  main.py  rate_limit.py  seed.py
backend/app/api/: attachments.py  audit.py  auth_api.py  budget_adjustments.py  bulk_operations.py  change_costs.py  comments.py  comparison.py  config.py  cost_items.py  dashboard.py  data.py  departments.py  export.py  facilities.py  functional_area_budgets.py  functional_areas.py  guards.py  import_export.py  permissions.py  price_history.py  summary.py  transfers.py  users.py  work_areas.py
backend/app/models/: __init__.py  attachment.py  audit_log.py  base.py  budget_adjustment.py  change_cost.py  comment.py  config_item.py  cost_item.py  department.py  enums.py  facility.py  functional_area.py  group_mapping.py  (+6 more)
backend/config/: config.json
backend/data/: budget_adjustments.csv  cost_bases.csv  cost_drivers.csv  cost_items.csv  departments.csv  facilities.csv  functional_areas.csv  phases.csv  products.csv  work_areas.csv
backend/scripts/: entrypoint.sh
backend/tests/: conftest.py  test_aggregation.py  test_api.py  test_approval.py  test_import.py
(+168 files in other folders)
